--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
     <!-- Centered Pills -->
 <ul class="nav nav-pills nav-justified nav-default">
   <!--<li class="active default"><a href="#">Home</a></li>-->
-  <li><a class="btn btn-default active" href="index.html">Home</a></li>
-  <li><a class="btn btn-default" href="conjugate.html">Conjugate</a></li>
-  <li><a class="btn btn-default" href="carver.html">Reviews</a></li>
-  <li><a class="btn btn-default" href="git.html">Git</a></li>
-  <li><a class="btn btn-default" href="review.html">Werk</a></li>
+  <li><a class="btn btn-standard active" href="index.html">Home</a></li>
+  <li><a class="btn btn-standard" href="conjugate.html">Conjugate</a></li>
+  <li><a class="btn btn-standard" href="carver.html">Reviews</a></li>
+  <li><a class="btn btn-standard" href="git.html">Git</a></li>
+  <li><a class="btn btn-standard" href="review.html">Werk</a></li>
 </ul>
 </div>
 </html>
